--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(BINARY ${CMAKE_PROJECT_NAME})
+set(BINARY ${Presentation-Progra-2})
 
 # add_executable(ExampleProject main.cpp file1.cpp file1.h)
 file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.cpp) #simplification
