--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(BINARY ${Presentation-Progra-2})
+set(BINARY ${Presentation_Progra_2})
 
 # add_executable(ExampleProject main.cpp file1.cpp file1.h)
 file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.cpp) #simplification
